[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/Winkle-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/Characters/Animations/CharacterAnims.tres" type="SpriteFrames" id=2]
[ext_resource path="res://Assets/Art/button_big_purple_pressed.png" type="Texture" id=3]
[ext_resource path="res://Assets/Art/button_big_yellow.png" type="Texture" id=4]
[ext_resource path="res://Assets/Art/button_big_yellow_pressed.png" type="Texture" id=5]
[ext_resource path="res://Assets/Art/IMG_0766.PNG" type="Texture" id=6]
[ext_resource path="res://Assets/Art/button_big_purple.png" type="Texture" id=7]
[ext_resource path="res://Scripts/WelcomeHOWTOPLAY.gd" type="Script" id=8]

[sub_resource type="DynamicFont" id=1]
size = 40
outline_size = 3
extra_spacing_top = 3
extra_spacing_space = 3
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 36
outline_size = 1
extra_spacing_top = 3
extra_spacing_space = 3
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=3]
length = 2.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.6, 2.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../ColorRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.772549, 0.960784, 0.960784, 1 ), Color( 0.772549, 0.960784, 0.960784, 1 ), Color( 0.772549, 0.960784, 0.960784, 0 ) ]
}

[node name="WelcomeHOWTOPLAY" type="Node2D"]
script = ExtResource( 8 )

[node name="Bkgnd" type="Sprite" parent="."]
position = Vector2( 0, -95.2917 )
scale = Vector2( 0.514469, 0.435534 )
texture = ExtResource( 6 )
centered = false

[node name="Frgnd" type="Node2D" parent="."]
position = Vector2( -800, 0 )
scale = Vector2( -0.15, 0.15 )

[node name="Beat" type="AnimatedSprite" parent="Frgnd"]
position = Vector2( -1947.27, 3071.12 )
frames = ExtResource( 2 )
animation = "BeatWalk"
frame = 1
speed_scale = 0.7
playing = true

[node name="Buff" type="AnimatedSprite" parent="Frgnd"]
position = Vector2( -4679.35, 2979.53 )
frames = ExtResource( 2 )
animation = "BuffWalk"
frame = 5
speed_scale = 0.7
playing = true

[node name="Jog" type="AnimatedSprite" parent="Frgnd"]
position = Vector2( -3225.96, 3153.77 )
frames = ExtResource( 2 )
animation = "JogWalk"
frame = 4
speed_scale = 0.7
playing = true

[node name="Surp" type="AnimatedSprite" parent="Frgnd"]
position = Vector2( -6074.04, 3023.74 )
frames = ExtResource( 2 )
animation = "SurpWalk"
speed_scale = 0.7
playing = true

[node name="PlayerSelect" type="HBoxContainer" parent="."]
visible = false
margin_top = 340.0
margin_right = 987.0
margin_bottom = 575.0
custom_constants/separation = 12
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="PlayerSelect"]
margin_left = 75.0
margin_right = 275.0
margin_bottom = 235.0
rect_min_size = Vector2( 200, 235 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Surp" type="AnimatedSprite" parent="PlayerSelect/TextureButton"]
position = Vector2( 100, 116 )
scale = Vector2( 0.15, 0.15 )
frames = ExtResource( 2 )
animation = "SurpIdle"
speed_scale = 0.7
playing = true
flip_h = true

[node name="TextureButton2" type="TextureButton" parent="PlayerSelect"]
margin_left = 287.0
margin_right = 487.0
margin_bottom = 235.0
rect_min_size = Vector2( 200, 235 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buff" type="AnimatedSprite" parent="PlayerSelect/TextureButton2"]
position = Vector2( 100, 116 )
scale = Vector2( 0.15, 0.15 )
frames = ExtResource( 2 )
animation = "BuffIdle"
speed_scale = 0.7
playing = true
flip_h = true

[node name="TextureButton3" type="TextureButton" parent="PlayerSelect"]
margin_left = 499.0
margin_right = 699.0
margin_bottom = 235.0
rect_min_size = Vector2( 200, 235 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Jog" type="AnimatedSprite" parent="PlayerSelect/TextureButton3"]
position = Vector2( 100, 116 )
scale = Vector2( 0.15, 0.15 )
frames = ExtResource( 2 )
animation = "JogIdle"
frame = 1
speed_scale = 0.7
playing = true

[node name="TextureButton4" type="TextureButton" parent="PlayerSelect"]
margin_left = 711.0
margin_right = 911.0
margin_bottom = 235.0
rect_min_size = Vector2( 200, 235 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Beat" type="AnimatedSprite" parent="PlayerSelect/TextureButton4"]
position = Vector2( 100, 116 )
scale = Vector2( 0.15, 0.15 )
frames = ExtResource( 2 )
animation = "BeatIdle"
frame = 4
speed_scale = 0.7
playing = true

[node name="Control" type="Control" parent="."]
margin_right = 1026.0
margin_bottom = 321.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextBubble" type="TextureRect" parent="Control"]
margin_left = 8.0
margin_top = -26.0
margin_right = 1020.0
margin_bottom = 355.0
rect_pivot_offset = Vector2( 490, 150 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Control/TextBubble"]
margin_left = 99.0
margin_top = 74.0
margin_right = 903.0
margin_bottom = 290.0
custom_fonts/bold_font = SubResource( 1 )
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0.290196, 0.0862745, 0.32549, 1 )
bbcode_enabled = true
bbcode_text = "[center]Four friends set off on a journey through their world, to build a better life for themselves, their communities, and those yet to come. They are faced with choices, striving for balance in their own health, and their community's health, while recognizing the overarching urgency of the climate crisis.[/center]"
text = "Four friends set off on a journey through their world, to build a better life for themselves, their communities, and those yet to come. They are faced with choices, striving for balance in their own health, and their community's health, while recognizing the overarching urgency of the climate crisis."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextButton" type="TextureButton" parent="Control/TextBubble"]
margin_left = 751.0
margin_top = 288.0
margin_right = 985.0
margin_bottom = 361.0
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 5 )
texture_disabled = ExtResource( 7 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/TextBubble/NextButton"]
margin_right = 234.0
margin_bottom = 69.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.290196, 0.0862745, 0.32549, 1 )
text = "Next"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/TextBubble"]
anims/PopupText = SubResource( 3 )

[node name="ColorRect" type="ColorRect" parent="Control"]
margin_right = 1024.0
margin_bottom = 600.0
mouse_filter = 2
color = Color( 0.772549, 0.960784, 0.960784, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05

[connection signal="pressed" from="Control/TextBubble/NextButton" to="." method="_on_NextButton_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
